[project]
name = "ComfyUI"
version = "0.14.0"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = "==3.11.*"

dependencies = [
    # --- Core ML stack (CUDA 13 / Blackwell compatible) ---
    "torch>=2.7.0",
    "torchvision",
    "torchaudio",
    # Optional performance (can remove if lock fails)
    "xformers",
    # HF stack aligned with modern ComfyUI
    "transformers>=4.50.3",
    # Common runtime deps some nodes expect
    "setuptools",
    "opencv-contrib-python",
    "comfyui-frontend-package==1.38.14",
    "comfyui-workflow-templates==0.8.42",
    "comfyui-embedded-docs==0.4.1",
    "torchsde>=0.2.6",
    "numpy>=1.25.0",
    "einops>=0.8.2",
    "tokenizers>=0.13.3",
    "sentencepiece>=0.2.1",
    "safetensors>=0.4.2",
    "aiohttp>=3.11.8",
    "yarl>=1.18.0",
    "pyyaml>=6.0.3",
    "pillow>=12.0.0",
    "scipy>=1.17.0",
    "tqdm>=4.66.5",
    "psutil>=7.2.2",
    "alembic>=1.18.4",
    "sqlalchemy>=2.0.46",
    "av>=14.2.0",
    "comfy-kitchen>=0.2.7",
    "comfy-aimdo>=0.1.8",
    "requests>=2.28.1",
    "kornia>=0.7.1",
    "spandrel>=0.4.1",
    "pydantic~=2.0",
    "pydantic-settings~=2.0",
]

[project.urls]
homepage = "https://www.comfy.org/"
repository = "https://github.com/comfyanonymous/ComfyUI"
documentation = "https://docs.comfy.org/"

# ---- CUDA 13 index ----
[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
torchaudio = { index = "pytorch-cu130" }
xformers = { index = "pytorch-cu130" }

# ---- Lint config unchanged ----
[tool.ruff]
lint.select = [
  "N805", # invalid-first-argument-name-for-method
  "S307", # suspicious-eval-usage
  "S102", # exec
  "E",
  "T",    # print-usage
  "W",
  # The "F" series in Ruff stands for "Pyflakes" rules, which catch various Python syntax errors and undefined names.
  # See all rules here: https://docs.astral.sh/ruff/rules/#pyflakes-f
  "F",
]

lint.ignore = ["E501", "E722", "E731", "E712", "E402", "E741"]

exclude = ["*.ipynb", "**/generated/*.pyi"]

[tool.pylint]
master.py-version = "3.11"
master.extension-pkg-allow-list = [
  "pydantic",
]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "line-too-long",
  "too-few-public-methods",
  "too-many-public-methods",
  "too-many-instance-attributes",
  "too-many-positional-arguments",
  "broad-exception-raised",
  "too-many-lines",
  "invalid-name",
  "unused-argument",
  "broad-exception-caught",
  "consider-using-with",
  "fixme",
  "too-many-statements",
  "too-many-branches",
  "too-many-locals",
  "too-many-arguments",
  "too-many-return-statements",
  "too-many-nested-blocks",
  "duplicate-code",
  "abstract-method",
  "superfluous-parens",
  "arguments-differ",
  "redefined-builtin",
  "unnecessary-lambda",
  "dangerous-default-value",
  "invalid-overridden-method",
  # next warnings should be fixed in future
  "bad-classmethod-argument",  # Class method should have 'cls' as first argument
  "wrong-import-order",  # Standard imports should be placed before third party imports
  "ungrouped-imports",
  "unnecessary-pass",
  "unnecessary-lambda-assignment",
  "no-else-return",
  "unused-variable",
]
