[project]
name = "ComfyUI"
version = "0.14.0"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = "==3.11.*"

dependencies = [
    # --- Core ML stack (CUDA 13 / Blackwell compatible) ---
    "torch>=2.7.0",
    "torchvision",
    "torchaudio",
    # Optional performance (can remove if lock fails)
    "xformers",
    # HF stack aligned with modern ComfyUI
    "transformers>=4.30.0",
    # Common runtime deps some nodes expect
    "setuptools",
    "opencv-contrib-python",
    "comfyui-frontend-package==1.38.14",
    "comfyui-workflow-templates==0.8.42",
    "comfyui-embedded-docs==0.4.1",
    "torchsde>=0.2.6",
    "numpy>=1.25.0",
    "einops>=0.8.2",
    "tokenizers>=0.13.3",
    "sentencepiece>=0.2.1",
    "safetensors>=0.4.2",
    "aiohttp>=3.11.8",
    "yarl>=1.18.0",
    "pyyaml>=6.0.3",
    "pillow>=10.3.0",
    "scipy>=1.17.0",
    "tqdm>=4.66.5",
    "psutil>=7.2.2",
    "alembic>=1.18.4",
    "sqlalchemy>=2.0.46",
    "av>=14.2.0",
    "comfy-kitchen>=0.2.7",
    "comfy-aimdo>=0.1.8",
    "requests>=2.28.1",
    "kornia>=0.7.1",
    "spandrel>=0.4.1",
    "pydantic~=2.0",
    "pydantic-settings~=2.0",
    "gitpython>=3.1.46",
    "pygithub>=2.8.1",
    "matrix-nio>=0.25.2",
    "huggingface-hub>=0.19.0",
    "typer>=0.24.0",
    "rich>=14.3.2",
    "typing-extensions>=4.15.0",
    "toml>=0.10.2",
    "uv>=0.10.3",
    "chardet>=5.2.0",
    "diffusers>=0.18.0",
    "accelerate>=1.12.0",
    "clip-interrogator>=0.6.0",
    "lark>=1.3.1",
    "onnxruntime>=1.15.0",
    "opencv-python-headless[ffmpeg]>=4.13.0.92",
    "matplotlib>=3.10.8",
    "peft>=0.18.1",
    "numba>=0.63.1",
    "colour-science>=0.4.7",
    "rembg>=2.0.69",
    "pixeloe>=0.1.4",
    "transparent-background>=1.1.2",
    "color-matcher>=0.5.0",
    "mss>=10.1.0",
    "scikit-image>=0.20.0",
    "scikit-learn>=1.8.0",
    "pymatting>=1.1.15",
    "timm>=0.4.12",
    "blend-modes>=2.2.0",
    "loguru>=0.7.3",
    "segment-anything>=1.0",
    "groundingdino-py>=0.4.0",
    "opencv-python>=4.7.0",
    "onnxruntime-gpu>=1.15.0",
    "protobuf>=3.20.2,<6.0.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "iopath>=0.1.9",
    "decord>=0.6.0",
    "ftfy>=6.3.1",
    "cmake>=3.25.0",
    "fairscale>=0.4.4",
    "imageio>=2.37.2",
    "joblib>=1.5.3",
    "pilgram>=2.0.0",
    "img2texture",
    "cstr",
    "ffmpy",
]

[project.urls]
homepage = "https://www.comfy.org/"
repository = "https://github.com/comfyanonymous/ComfyUI"
documentation = "https://docs.comfy.org/"

# ---- CUDA 13 index ----
[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
torchaudio = { index = "pytorch-cu130" }
xformers = { index = "pytorch-cu130" }
img2texture = { git = "https://github.com/WASasquatch/img2texture.git" }
cstr = { git = "https://github.com/WASasquatch/cstr" }
ffmpy = { git = "https://github.com/WASasquatch/ffmpy.git" }

# ---- Lint config unchanged ----
[tool.ruff]
lint.select = [
  "N805", # invalid-first-argument-name-for-method
  "S307", # suspicious-eval-usage
  "S102", # exec
  "E",
  "T",    # print-usage
  "W",
  # The "F" series in Ruff stands for "Pyflakes" rules, which catch various Python syntax errors and undefined names.
  # See all rules here: https://docs.astral.sh/ruff/rules/#pyflakes-f
  "F",
]

lint.ignore = ["E501", "E722", "E731", "E712", "E402", "E741"]

exclude = ["*.ipynb", "**/generated/*.pyi"]

[tool.pylint]
master.py-version = "3.11"
master.extension-pkg-allow-list = [
  "pydantic",
]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "line-too-long",
  "too-few-public-methods",
  "too-many-public-methods",
  "too-many-instance-attributes",
  "too-many-positional-arguments",
  "broad-exception-raised",
  "too-many-lines",
  "invalid-name",
  "unused-argument",
  "broad-exception-caught",
  "consider-using-with",
  "fixme",
  "too-many-statements",
  "too-many-branches",
  "too-many-locals",
  "too-many-arguments",
  "too-many-return-statements",
  "too-many-nested-blocks",
  "duplicate-code",
  "abstract-method",
  "superfluous-parens",
  "arguments-differ",
  "redefined-builtin",
  "unnecessary-lambda",
  "dangerous-default-value",
  "invalid-overridden-method",
  # next warnings should be fixed in future
  "bad-classmethod-argument",  # Class method should have 'cls' as first argument
  "wrong-import-order",  # Standard imports should be placed before third party imports
  "ungrouped-imports",
  "unnecessary-pass",
  "unnecessary-lambda-assignment",
  "no-else-return",
  "unused-variable",
]
